# ecomm-micro-agentic-rag-chat-client

./: .gitignore  Dockerfile  README.md  config.py  grader.py  ingestion.py  nodes.py  pyproject.toml  requirements.txt  response_model.py  retriever.py  tools.py  workflow.py
server/: app.py
