[project]
name = "ecomm-micro-agentic-rag-chat-client"
version = "0.1.0"
description = "Chat client for 'ecomm-micro' microservices project"
requires-python = ">=3.14"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.5",
  "aiosignal==1.4.0",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.13.0",
  "asttokens==3.0.1",
  "attrs==26.1.0",
  "beautifulsoup4==4.14.3",
  "bottleneck==1.6.0",
  "bs4==0.0.2",
  "certifi==2026.2.25",
  "cffi==2.0.0",
  "charset-normalizer==3.4.7",
  "click==8.3.2",
  "cryptography==46.0.7",
  "dataclasses-json==0.6.7",
  "decorator==5.2.1",
  "distro==1.9.0",
  "docstring-parser==0.18.0",
  "executing==2.2.1",
  "fastapi==0.136.0",
  "filetype==1.2.0",
  "frozenlist==1.8.0",
  "google-api-core==2.30.3",
  "google-auth==2.49.2",
  "google-cloud-aiplatform==1.148.0",
  "google-cloud-bigquery==3.41.0",
  "google-cloud-core==2.5.1",
  "google-cloud-resource-manager==1.17.0",
  "google-cloud-storage==3.10.1",
  "google-cloud-vectorsearch==0.10.0",
  "google-crc32c==1.8.0",
  "google-genai==1.73.1",
  "google-resumable-media==2.8.2",
  "googleapis-common-protos==1.74.0",
  "greenlet==3.4.0",
  "grpc-google-iam-v1==0.14.4",
  "grpcio==1.80.0",
  "grpcio-status==1.80.0",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "httpx-sse==0.4.3",
  "idna==3.11",
  "iniconfig==2.3.0",
  "ipython==9.12.0",
  "ipython-pygments-lexers==1.1.1",
  "jedi==0.19.2",
  "jiter==0.14.0",
  "jsonpatch==1.33",
  "jsonpointer==3.1.1",
  "langchain==1.2.15",
  "langchain-classic==1.0.3",
  "langchain-community==0.4.1",
  "langchain-core==1.2.29",
  "langchain-google-genai==4.2.2",
  "langchain-tests==1.1.6",
  "langchain-text-splitters==1.1.1",
  "langgraph==1.1.6",
  "langgraph-checkpoint==4.0.1",
  "langgraph-prebuilt==1.0.9",
  "langgraph-sdk==0.3.13",
  "langsmith==0.7.31",
  "markdown-it-py==4.0.0",
  "marshmallow==3.26.2",
  "matplotlib-inline==0.2.1",
  "mdurl==0.1.2",
  "multidict==6.7.1",
  "mypy-extensions==1.1.0",
  "numexpr==2.14.1",
  "numpy==2.4.4",
  "ollama==0.6.1",
  "orjson==3.11.8",
  "ormsgpack==1.12.2",
  "packaging==26.1",
  "parso==0.8.6",
  "pexpect==4.9.0",
  "pluggy==1.6.0",
  "prompt-toolkit==3.0.52",
  "propcache==0.4.1",
  "proto-plus==1.27.2",
  "protobuf==6.33.6",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "py-cpuinfo==9.0.0",
  "pyarrow==22.0.0",
  "pyasn1==0.6.3",
  "pyasn1-modules==0.4.2",
  "pycparser==3.0",
  "pydantic==2.13.0",
  "pydantic-core==2.46.0",
  "pydantic-settings==2.13.1",
  "pygments==2.20.0",
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-benchmark==5.2.3",
  "pytest-codspeed==4.4.0",
  "pytest-recording==0.13.4",
  "pytest-socket==0.7.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.2",
  "pyyaml==6.0.3",
  "regex==2026.4.4",
  "requests==2.33.1",
  "requests-toolbelt==1.0.0",
  "rich==15.0.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.8.3",
  "sqlalchemy==2.0.49",
  "stack-data==0.6.3",
  "starlette==1.0.0",
  "syrupy==5.1.0",
  "tenacity==9.1.4",
  "tiktoken==0.12.0",
  "tqdm==4.67.3",
  "traitlets==5.14.3",
  "typing-extensions==4.15.0",
  "typing-inspect==0.9.0",
  "typing-inspection==0.4.2",
  "urllib3==2.6.3",
  "uuid-utils==0.14.1",
  "uvicorn==0.44.0",
  "validators==0.35.0",
  "vcrpy==8.1.1",
  "wcwidth==0.6.0",
  "websockets==16.0",
  "wrapt==2.1.2",
  "xxhash==3.6.0",
  "yarl==1.23.0",
  "zstandard==0.25.0",
]

[project.scripts]
server = "server.app:main"
